--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,18 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
+  postgres:
+    image: postgres:latest
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    logging:
+      options:
+        max-size: 10m
+        max-file: "3"
+    ports:
+      - '5438:5432'
+    volumes: 
+      - ./.docker/postgres-data:/var/lib/postgresql/data
+      # copy the sql script to create tables
+      - ./product_aggregator/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
