--- a/sitemap_scraper/Dockerfile
+++ b/sitemap_scraper/Dockerfile
@@ -2,7 +2,7 @@ FROM python:latest
 
 WORKDIR /src
 
-COPY requiremnts.txt requirements.txt
+COPY requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt
 
