--- a/sitemap_scraper/Dockerfile
+++ b/sitemap_scraper/Dockerfile
@@ -1,3 +1,5 @@
+# This docker image needs other packages and shouldn't be
+# ran without the docker-compose.yml file provided.
 FROM python:latest
 
 WORKDIR /src
@@ -6,5 +8,5 @@ COPY requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt
 
-COPY . .
-CMD [ "python", "main.py" ]
+COPY . ./app
+CMD [ "python", "-m", "app" ]
