reafactor: make module of product_scraper

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,4 +42,27 @@ services:
     volumes:
       - ./bus:/src/bus
       - ./tasks.py:/src/tasks.py
+  product_scraper:
+    build: ./product_scraper/
+    depends_on:
+    - rabbitmq
+    links:
+      - "rabbitmq:rabbitmq"
+    environment:
+      - RABBITHOST=rabbitmq
+    volumes:
+      - ./bus:/src/bus
+      - ./tasks.py:/src/tasks.py
+      - ./products.py:/src/products.py
+  # product_aggregator:
+  #   build: ./product_aggregator/
+  #   depends_on:
+  #   - rabbitmq
+  #   - postgres
+  #   links:
+  #     - "rabbitmq:rabbitmq"
+  #     - "postgres:postgres"
+  #   environment:
+  #     - RABBITHOST=rabbitmq
+  #     - PGHOST=postgres
     
