--- a/product_scraper/Dockerfile
+++ b/product_scraper/Dockerfile
@@ -6,5 +6,5 @@ COPY requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt
 
-COPY . .
-CMD [ "python", "main.py" ]
+COPY . ./product_scraper
+CMD [ "python", "-m", "product_scraper" ]
