--- a/product_aggregator/Dockerfile
+++ b/product_aggregator/Dockerfile
@@ -1,4 +1,6 @@
-FROM  python:latest
+# This docker image needs other packages and shouldn't be
+# ran without the docker-compose.yml file provided.
+FROM python:latest
 
 WORKDIR /src
 
@@ -6,6 +8,5 @@ COPY requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt
 
-COPY . .
-
-CMD ["python", "main.py"]
+COPY . ./app
+CMD [ "python", "-m", "app" ]
